@@ -4,6 +4,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Scanner;
+import java.util.stream.Collectors;
 
 public class Main {
     public static void main(String[] args) {
@@ -12,8 +13,8 @@ public class Main {
         List<String> numbers = new ArrayList<>();
         List<String> urls = new ArrayList<>();
 
-        numbers = Arrays.stream(scanner.nextLine().split("\\S+")).toList();
-        urls = Arrays.stream(scanner.nextLine().split("\\S+")).toList();
+        numbers = Arrays.stream(scanner.nextLine().split(" ")).collect(Collectors.toList());
+        urls = Arrays.stream(scanner.nextLine().split(" ")).collect(Collectors.toList());
 
         Smartphone smartphone = new Smartphone(numbers, urls);
 
